# favoritesCloudBot

./: database.py  loader.py  main.py  models.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 112fbeed8726_remove_username.py  16f203dd3c4c_user_current_folder_id.py  32f9c43338a0_remove_current_menu.py  4a0cf658fcc4_create_tables.py  7773730c14a7_tables.py  7cea25ad9724_user_table.py  8f1438a265ff_folder_and_file_tables.py  922abdaaa963_add_username.py  b9ec598ac65f_tables.py  c87a3e6c1faa_remove_current_folder_id.py
handlers/: __init__.py  folder_handlers.py  start.py
handlers/folders/: add_folder.py  delete_folder.py  folders_moving.py
keyboards/: folders_footer_ik.py
routers/: __init__.py  folder_routers.py
services/: folder_service.py  user_service.py
states/: __init__.py  folder_state.py  test.py
