[tool.poetry]
name = "favoritescloudbot"
version = "0.1.0"
description = ""
authors = ["zaymovskey <zaymovskey@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
